src/test/fail/lambda_bad_token.ly
###
SyntaxError: Unexpected token '}'.
Where: File "test/fail/lambda_bad_token.ly" at line 6
###

var v = {|| }
